--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,6 +1,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
 
     <application
       android:name=".MainApplication"
@@ -13,6 +15,8 @@
       <meta-data
       android:name="com.google.android.geo.API_KEY"
       android:value="AIzaSyChsOe4pzdf-RqFQGg0iu01KRotr1cIAjY"/>
+
+      
       <activity
         android:name=".MainActivity"
         android:label="@string/app_name"
