--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@mapbox/polyline": "^1.2.0",
     "@react-native-firebase/app": "^17.4.2",
     "@react-native-firebase/auth": "^17.4.2",
     "@react-native-google-signin/google-signin": "^9.0.2",
@@ -18,7 +19,9 @@
     "@react-navigation/native-stack": "^6.9.12",
     "react": "18.2.0",
     "react-native": "0.71.5",
+    "react-native-axios": "^0.17.1",
     "react-native-gesture-handler": "^2.9.0",
+    "react-native-get-location": "^3.0.1",
     "react-native-maps": "^1.4.0",
     "react-native-reanimated": "^3.0.2",
     "react-native-safe-area-context": "^4.5.0",
