--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
   },
   "dependencies": {
     "@mapbox/polyline": "^1.2.0",
-    "@react-native-firebase/app": "^17.4.2",
-    "@react-native-firebase/auth": "^17.4.2",
+    "@react-native-firebase/app": "^17.5.0",
+    "@react-native-firebase/auth": "^17.5.0",
+    "@react-native-firebase/database": "^17.5.0",
     "@react-native-google-signin/google-signin": "^9.0.2",
     "@react-navigation/drawer": "^6.6.2",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
+    "firebase": "^9.22.0",
+    "firebase-admin": "^11.8.0",
     "react": "18.2.0",
     "react-native": "0.71.5",
     "react-native-axios": "^0.17.1",
@@ -27,7 +30,9 @@
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "^3.20.0",
     "react-native-toast-message": "^2.1.6",
-    "react-native-vector-icons": "^9.2.0"
+    "react-native-vector-icons": "^9.2.0",
+    "stream": "^0.0.2",
+    "url": "^0.11.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
